Updated assistant-10. Retrieval working, but not making function calls.

--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_2mM268li4IHKNtpmT0vk8wVw 1\n"
+      "Added assistant:  asst_zMKGJSoTbMSP83OmckE9oxLs 1\n"
      ]
     }
    ],
@@ -165,19 +165,19 @@
      "text": [
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_zuFytyuWTe7mnloLJSmzmUOm', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_Udk3uBeRCReP9AW1hhQfjTKa', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_azYicHFKVNrBWPQ2gAUiSIe2', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_fhNIY98F1B8hqNsh48lvDxi0', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
-      "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Assistant: The latest stock prices are as follows:\n",
       "\n",
-      "- Microsoft (MSFT): $388.47\n",
-      "- NVIDIA (NVDA): $547.10\n",
+      "- Microsoft (MSFT): $390.36\n",
+      "- NVIDIA (NVDA): $563.68\n",
+      "\n",
+      "Please note that these prices are subject to change and may vary by the time you check the market.\n",
       "User: Can you please provide me the latest stock prices for Microsoft and NVIDIA?\n",
-      "ThreadDeleted(id='thread_8u9udV165DG3SXQACXbyAjKQ', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_2mM268li4IHKNtpmT0vk8wVw', deleted=True, object='assistant.deleted')\n"
+      "ThreadDeleted(id='thread_mpjriokfsOnHSr4mrhTvXoBa', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_zMKGJSoTbMSP83OmckE9oxLs', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
