--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_arylhXwQihkVI27k0aX3eYo9 1\n"
+      "Added assistant:  asst_My3OI4fz14AXpgKHwrbOchCi 1\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_ngZlnts0EokdtChQYojNMvSs', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_JSdcVJKezQw0gQdBoPLsfl4H', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_AuLLyG3PVNLVlYDWLsL5vlre', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_6uxHtcDNCvMDQqoM3IR4cpSk', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_5HTRs2DxkBkcrzinPe9NWzhz', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_p0BzEP96c3lNc5T10mf9yyDA', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_4m15cMODoysVW8unwH8J0yri', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_5CbPpCHlBazSYtNAalaeJa7n', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_VABlxmdDQVpwLe8q1loRELhq', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_4nlNCOek2IZ0xevaeP4z9Ske', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_xgyxQXmasAH8PXAjo1gMPArz', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_NRl8EUDWJCkqumhDhVxnPRwY', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_y3La095wnCGNEHGCLc8N6nth', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_7AwcyFiSkgE4MXSg51QL105o', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
@@ -230,12 +230,12 @@
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_XFovCNvbkDuCsEm944NiNzfK', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com, vsantana@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head>\\\\n<title>Market Performance Summary</title>\\\\n</head>\\\\n<body>\\\\n<h1>Tech Giants Microsoft and Nvidia Outshine Others in Recent Market Performance</h1>\\\\n<p><b>Date:</b> 01/15/2024</p>\\\\n<p>In recent market performance, <b>Microsoft (MSFT)</b> and <b>Nvidia (NVDA)</b> have excelled, while others like <b>Apple (AAPL)</b>, <b>Novo Nordisk (NVO)</b>, <b>MercadoLibre (MELI)</b>, <b>Tradeweb Markets (TW)</b>, and <b>Tesla (TSLA)</b> have shown tepid results.</p>\\\\n<p>Microsoft has seen its stock price rise, supported by its transition to cloud-based services and strategic acquisitions. Nvidia\\'s value has soared due to its grip on the gaming industry and advances in AI and data centers.</p>\\\\n<p>Apple has faced challenges impacting iPhone sales, but its robust services division offers some balance. Novo Nordisk has been under pressure from competition and industry pricing, MercadoLibre with economic uncertainties in its region, Tradeweb Markets by a trading volume slowdown, and Tesla by valuation and competition concerns.</p>\\\\n<p>Looking ahead, Novo Nordisk\\'s product pipeline, MercadoLibre\\'s digital economy presence, Tradeweb\\'s market position, and Tesla\\'s production and innovation may help these companies bounce back.</p>\\\\n<p><b>Stock Closing Prices:</b></p>\\\\n<ul>\\\\n<li>Microsoft (MSFT): $388.47</li>\\\\n<li>Nvidia (NVDA): $547.10</li>\\\\n<li>Apple (AAPL): $185.92</li>\\\\n<li>Novo Nordisk (NVO): $107.16</li>\\\\n<li>MercadoLibre (MELI): $1658.58</li>\\\\n<li>Tradeweb Markets (TW): $95.91</li>\\\\n<li>Tesla (TSLA): $218.89</li>\\\\n</ul>\\\\n<p>These developments reveal a tech industry landscape with varying trajectories among key players, and they will continue to be a focal point for investors and industry watchers alike.</p>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_5GB7FgaUjkSaf0ECV37d7Rxi', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com, vsantana@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head>\\\\n <title>Market Performance Summary - Tech Giants</title>\\\\n</head>\\\\n<body>\\\\n<h2>Market Performance Summary - Tech Giants</h2>\\\\n<p><strong>Date:</strong> January 16, 2024</p>\\\\n<p>In recent market performance, <strong>Microsoft (MSFT)</strong> and <strong>Nvidia (NVDA)</strong> have outshined other tech giants with their impressive growth, attributed to strategic advances in cloud services and AI technologies, respectively. In contrast, <strong>Apple (AAPL)</strong>, <strong>Novo Nordisk (NVO)</strong>, <strong>MercadoLibre (MELI)</strong>, <strong>Tradeweb Markets (TW)</strong>, and <strong>Tesla (TSLA)</strong> have encountered hurdles in their market performance due to various industry and economic challenges. However, they each have potential growth opportunities that may influence their future success.</p>\\\\n<p><strong>Stock Closing Prices:</strong></p>\\\\n<ul>\\\\n  <li>Microsoft (MSFT): $390.48</li>\\\\n  <li>Nvidia (NVDA): $563.65</li>\\\\n  <li>Apple (AAPL): $182.57</li>\\\\n  <li>Novo Nordisk (NVO): $106.05</li>\\\\n  <li>MercadoLibre (MELI): $1676.60</li>\\\\n  <li>Tradeweb Markets (TW): $95.91</li>\\\\n  <li>Tesla (TSLA): $219.29</li>\\\\n</ul>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
       "Sending email...\n",
       "Email sent to: alemor@microsoft.com, vsantana@microsoft.com\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
-      "Assistant: The email has been successfully sent to alemor@microsoft.com and vsantana@microsoft.com with the summary of the market performance article, including the latest closing prices for Microsoft, Nvidia, Apple, Novo Nordisk, MercadoLibre, Tradeweb Markets, and Tesla, formatted in simple HTML.\n",
+      "Assistant: The email summarizing the article, including today's date and the closing prices of the stocks mentioned, has been sent to alemor@microsoft.com and vsantana@microsoft.com.\n",
       "User: For the following article: \n",
       "\n",
       "Article: Title: Tech Giants Microsoft and Nvidia Outshine Others in Recent Market Performance\n",
@@ -264,8 +264,8 @@
       "\n",
       "\n",
       "Email a summary of the article in simple HTML format, include today's date, include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com and vsantana@microsoft.com.Use only the provide text.\n",
-      "ThreadDeleted(id='thread_bAYIYJ5D4tnwZx7N9qfeMu7K', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_arylhXwQihkVI27k0aX3eYo9', deleted=True, object='assistant.deleted')\n"
+      "ThreadDeleted(id='thread_Jkz0erVJrlyiJJHxHf7M0aYs', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_My3OI4fz14AXpgKHwrbOchCi', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
