--- a/notebooks/assistant-06-code_function_la_email.ipynb
+++ b/notebooks/assistant-06-code_function_la_email.ipynb
@@ -27,12 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
-    "import requests\n",
     "import oaihelper as framework\n",
     "import yfinance as yf\n",
     "\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_75SMicxVIqlp151CqsDFzJ4W 1\n"
+      "Added assistant:  asst_kyfLQ7ioPqs0faC1YvFYPPaN 2\n"
      ]
     }
    ],
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -214,24 +213,30 @@
      "text": [
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
+      "Function Calling\n",
+      "{'tool_calls': [{'id': 'call_MDf3RDJVBumRHoH99Trn2EVe', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_1jfzdD8XWpxvFxUZhbwH66yu', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_KNGFTnOkVIeZ7NE0YgRwlzPR', 'function': {'arguments': '{\"symbol\": \"GOOGL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_tf8PsATH3hXHek7IPRKkls8G', 'function': {'arguments': '{\"symbol\": \"AMZN\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_U2nTfN1xOfvwQwxpL47EhdFh', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_E0apT6RBBnkiVQJ825lIOBY7', 'function': {'arguments': '{\"symbol\": \"NFLX\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_whqcoq5wSsSsnreAAAuicz92', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
-      "Assistant: I apologize for the inconvenience, but it seems we're facing technical issues that prevent us from reading the file's content. This situation is quite unusual, typically we would be able to access and read the contents of the uploaded file to generate the report you've requested.\n",
-      "\n",
-      "As we seem to be at an impasse with the file processing, I would advise to try re-uploading the file, ensuring it is in a common format such as CSV, TXT, or XLSX. If the file contains sensitive information, please ensure no restrictions are placed on it that could prevent it from being read. If it is a complex or non-standard file type, please provide additional instructions on how to access its content.\n",
-      "\n",
-      "Once the file is successfully re-uploaded and accessible, I can proceed with generating the HTML report with the latest stock prices and information on best and worst performing stocks in your portfolio. Please upload the file again, and we'll try to process it one more time.\n",
-      "Assistant: It appears that we are experiencing repeated issues trying to process the file, which is not common. This suggests that there may be environment-related issues or restrictions that are preventing us from accessing the file contents in a standard way. \n",
-      "\n",
-      "At this point, I would typically check the file size, permissions, and then attempt to open it with a generic binary or text read method to provide a snippet of its contents for further inspection. However, due to the unexpected nature of these issues, I'll try the simplified method of reading the file in binary mode to at least provide some information on its contents.\n",
-      "Assistant: It appears there was another issue while trying to read the file using the alternative approach. This suggests that the issue may be related to the environment or the file itself, rather than the specific reading method.\n",
-      "\n",
-      "I'll explore further possible solutions to identify the content and format of your uploaded file. Let's try using a more robust approach that includes several file types which might include binary formats such as a Word document or a PDF.\n",
-      "Assistant: It seems there was an issue while trying to read the file with the methods I used. Let's try an alternative approach to identify the content and format of the file. I will attempt to open it with different file format readers to determine its structure.\n",
-      "Assistant: Before I proceed, I need to inspect the content of your uploaded file to understand the format of your portfolio data. After that, I can retrieve the latest stock prices, determine the best and worst performing stocks, and compose an HTML formatted report for you. Let's start by examining the file you provided.\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Function Calling\n",
+      "{'tool_calls': [{'id': 'call_UY1ojm5U3lfIQtfYsWJWsguN', 'function': {'arguments': '{\"to\":\"alemor@microsoft.com\",\"content\":\"\\\\n<html>\\\\n    <head>\\\\n        <style>\\\\n            table, th, td {\\\\n                border: 1px solid black;\\\\n                border-collapse: collapse;\\\\n            }\\\\n            th, td {\\\\n                padding: 5px;\\\\n                text-align: left;\\\\n            }\\\\n            th {\\\\n                background-color: #4CAF50;\\\\n                color: white;\\\\n            }\\\\n            .best {\\\\n                background-color: #90ee90;\\\\n            }\\\\n            .worst {\\\\n                background-color: #ffcccb;\\\\n            }\\\\n        </style>\\\\n    </head>\\\\n    <body>\\\\n        <h2>Stock Portfolio Report</h2>\\\\n        <table>\\\\n            <tr>\\\\n                <th>Ticker</th>\\\\n                <th>Quantity</th>\\\\n                <th>Purchase Price</th>\\\\n                <th>Cost</th>\\\\n                <th>Latest Price</th>\\\\n                <th>Market Value</th>\\\\n                <th>Profit/Loss</th>\\\\n            </tr>\\\\n            \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>AAPL</td>\\\\n            <td>10</td>\\\\n            <td>$250.00</td>\\\\n            <td>$2500.00</td>\\\\n            <td>$182.62</td>\\\\n            <td>$1826.20</td>\\\\n            <td>-$673.80</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"best\\\\\">\\\\n            <td>MSFT</td>\\\\n            <td>200</td>\\\\n            <td>$100.00</td>\\\\n            <td>$20000.00</td>\\\\n            <td>$390.61</td>\\\\n            <td>$78123.00</td>\\\\n            <td>$58123.00</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>GOOGL</td>\\\\n            <td>1200</td>\\\\n            <td>$75.00</td>\\\\n            <td>$90000.00</td>\\\\n            <td>$142.26</td>\\\\n            <td>$170718.00</td>\\\\n            <td>$80718.00</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>AMZN</td>\\\\n            <td>1800</td>\\\\n            <td>$50.00</td>\\\\n            <td>$90000.00</td>\\\\n            <td>$152.79</td>\\\\n            <td>$275022.00</td>\\\\n            <td>$185022.00</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"worst\\\\\">\\\\n            <td>TSLA</td>\\\\n            <td>500</td>\\\\n            <td>$500.00</td>\\\\n            <td>$250000.00</td>\\\\n            <td>$219.39</td>\\\\n            <td>$109697.20</td>\\\\n            <td>-$140302.80</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>NFLX</td>\\\\n            <td>300</td>\\\\n            <td>$80.00</td>\\\\n            <td>$24000.00</td>\\\\n            <td>$482.11</td>\\\\n            <td>$144631.50</td>\\\\n            <td>$120631.50</td>\\\\n        </tr>\\\\n    \\\\n        <tr class=\\\\\"\\\\\">\\\\n            <td>NVDA</td>\\\\n            <td>250</td>\\\\n            <td>$120.00</td>\\\\n            <td>$30000.00</td>\\\\n            <td>$563.30</td>\\\\n            <td>$140826.25</td>\\\\n            <td>$110826.25</td>\\\\n        </tr>\\\\n    \\\\n            </table>\\\\n            \\\\n        <h3>Best Performing Stock: AMZN</h3>\\\\n        <p>\\\\n            Quantity: 1800<br>\\\\n            Purchase Price: $50.00<br>\\\\n            Latest Price: $152.79<br>\\\\n            Profit/Loss: $185022.00\\\\n        </p>\\\\n            \\\\n        <h3>Worst Performing Stock: TSLA</h3>\\\\n        <p>\\\\n            Quantity: 500<br>\\\\n            Purchase Price: $500.00<br>\\\\n            Latest Price: $219.39<br>\\\\n            Profit/Loss: -$140302.80\\\\n        </p>\\\\n    </body>\\\\n</html>\\\\n\"}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "Sending email...\n",
+      "Email sent to: alemor@microsoft.com\n",
+      "Submitting outputs back to the Assistant...\n",
+      "Waiting for the Assistant to process...\n",
+      "Assistant: The HTML formatted report with the details for each stock based on the latest stock prices, and the best and worst performing stocks in your portfolio, has been sent to alemor@microsoft.com.\n",
       "User: Based on the provided portfolio, please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\n",
-      "ThreadDeleted(id='thread_a5YHmRsKsmHuahVqu1HroKVL', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_75SMicxVIqlp151CqsDFzJ4W', deleted=True, object='assistant.deleted')\n",
-      "FileDeleted(id='assistant-BEej2hVQYcy5r0fkaMXjLxkC', deleted=True, object='file')\n"
+      "ThreadDeleted(id='thread_atx1U1aFxDTZdZ5cdNk0ru7Q', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_kyfLQ7ioPqs0faC1YvFYPPaN', deleted=True, object='assistant.deleted')\n",
+      "FileDeleted(id='assistant-LRmMdeziJqDgQe35HctdaedD', deleted=True, object='file')\n"
      ]
     }
    ],
