--- a/notebooks/assistant-06-code_function_la_email.ipynb
+++ b/notebooks/assistant-06-code_function_la_email.ipynb
@@ -99,7 +99,6 @@
     "{\n",
     "    \"type\": \"function\",\n",
     "    \"function\": {\n",
-    "\n",
     "        \"name\": \"send_email\",\n",
     "        \"description\": \"Sends an email to a recipient(s).\",\n",
     "        \"parameters\": {\n",
@@ -182,7 +181,7 @@
     "message = client.beta.threads.messages.create(\n",
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
-    "    content=\"Based on the provided portfolio, please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\"\n",
+    "    content=\"Based on the provided portfolio, please email me an HTML formatted report to alemor@microsoft.com with the details for each stock based on the latest stock prices, and list the best and worst performing stocks in my portfolio.\"\n",
     ")\n",
     "\n",
     "# Step 4: Run the Assistant\n",
