--- a/notebooks/assistant-10-retrieval.ipynb
+++ b/notebooks/assistant-10-retrieval.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_fDhA3vyjqLnXRqCk9vhZURqF 1\n"
+      "Added assistant:  asst_xGZRZrM5rrCVBv9ZR1Lg9U8W 2\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
     "message = client.beta.threads.messages.create(\n",
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
-    "    content=\"Can you please email to alemor@microsoft.com the procedure to request medical leave?\"\n",
+    "    content=\"What is the procedure to request medical leave and can you provide citations?\"\n",
     ")\n",
     "\n",
     "# Step 4: Run the Assistant\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -131,34 +131,21 @@
      "text": [
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
-      "Assistant: I'm sorry, but I am not able to send emails. However, I have found the procedure for requesting medical leave in the document provided. You can copy the information below and email it to the intended recipient.\n",
+      "Assistant: The procedure to request medical leave at Contoso includes the following steps:\n",
       "\n",
-      "---\n",
+      "1. Notify their supervisor and the human resources department as soon as possible about the need for leave and the expected duration.\n",
+      "2. Provide appropriate documentation to support the request, such as a doctor's note, a certificate of enrollment, a court summons, or a military order.\n",
+      "3. Complete and submit the required forms to the human resources department before the start of the leave.\n",
+      "4. Keep in touch with their supervisor and the human resources department during the leave and inform them of any changes in their situation or return date.\n",
+      "5. Return to work on the agreed date and resume the duties and responsibilities.\n",
       "\n",
-      "Subject: Procedure to Request Medical Leave\n",
-      "\n",
-      "Dear [Recipient's Name],\n",
-      "\n",
-      "I would like to inform you of the procedure to request medical leave as specified in Contoso’s Medical Leave and Leave of Absence Policy. Please find the details below:\n",
-      "\n",
-      "- Notify their supervisor and the human resources department as soon as possible about their need for leave and the expected duration.\n",
-      "- Provide appropriate documentation to support their request, such as a doctor's note, a certificate of enrollment, a court summons, or a military order.\n",
-      "- Complete and submit the required forms to the human resources department before the start of their leave.\n",
-      "- Keep in touch with their supervisor and the human resources department during their leave and inform them of any changes in their situation or return date.\n",
-      "- Return to work on the agreed date and resume their duties and responsibilities.\n",
-      "\n",
-      "Employees who take medical leave or leave of absence are entitled to certain benefits and protections, and are expected to comply with company policies and obligations.\n",
-      "\n",
-      "Please ensure you follow these steps carefully to facilitate your request for a medical leave.\n",
-      "\n",
-      "Best Regards,\n",
-      "[Your Name]\n",
-      "User: Can you please email to alemor@microsoft.com the procedure to request medical leave?\n",
-      "ThreadDeleted(id='thread_j9s5jyq7kfJVLB7QXJJNwuHS', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_fDhA3vyjqLnXRqCk9vhZURqF', deleted=True, object='assistant.deleted')\n",
-      "FileDeleted(id='assistant-rTqLEVWmt5syvec7xUwIzKgf', deleted=True, object='file')\n",
-      "FileDeleted(id='assistant-mt1RVNKKNm2uHkyFqIU6rn21', deleted=True, object='file')\n",
-      "FileDeleted(id='assistant-CADFvs8vVD6ZgHYPdohpiz2G', deleted=True, object='file')\n"
+      "Further details on employee entitlements, obligations, and expectations during medical leave are outlined in the document, including the continuation of health insurance coverage, restoration of the original or equivalent position upon return, and protection from discrimination and retaliation. The document also mentions that the policy could be modified or terminated at any time and is subject to applicable laws and regulations【0†source】.\n",
+      "User: What is the procedure to request medical leave and can you provide citations?\n",
+      "ThreadDeleted(id='thread_VTGfXVuxw9eXfx0gaVJGiCCZ', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_xGZRZrM5rrCVBv9ZR1Lg9U8W', deleted=True, object='assistant.deleted')\n",
+      "FileDeleted(id='assistant-8o2T2wGspBE9e5SqfqGOPA9c', deleted=True, object='file')\n",
+      "FileDeleted(id='assistant-dIcTyXPSc6sKqLzkiqI687c4', deleted=True, object='file')\n",
+      "FileDeleted(id='assistant-rpGjqiO45Hsko3KghuBPsXy5', deleted=True, object='file')\n"
      ]
     }
    ],
