--- a/notebooks/assistant-10-retrieval.ipynb
+++ b/notebooks/assistant-10-retrieval.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load the files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -40,6 +47,13 @@
     "file_benefits = framework.upload_file(client,\"../data/contoso-benefits.txt\")\n",
     "file_401k = framework.upload_file(client,\"../data/contoso-401k.txt\")\n",
     "file_leave = framework.upload_file(client,\"../data/contoso-medical_leave.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the tools to use in the Assistants"
    ]
   },
   {
@@ -75,6 +89,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the HR Assistant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -94,6 +115,13 @@
     "        tools=[{\"type\": \"retrieval\"}],\n",
     "        model=framework.gpt_deployment_name,\n",
     "        file_ids=[file_benefits.id, file_401k.id, file_leave.id],)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a thread and put a message on the thread"
    ]
   },
   {
@@ -118,6 +146,13 @@
     "    assistant_id=hr_assistant.id,\n",
     "    instructions=\"Today's date and time is: \" + framework.get_localized_datetime() + \".\\n\\n\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process the message"
    ]
   },
   {
