--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_zMKGJSoTbMSP83OmckE9oxLs 1\n"
+      "Added assistant:  asst_EM9rJaF1gAj93KyKTvLdGByr 1\n"
      ]
     }
    ],
@@ -151,33 +151,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process the message, function calling leveraging the latest stock prices, print the results and dispose of the objects"
+    "### Handle Processing functions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_calling(client, run):\n",
+    "    print(\"Function Calling\")\n",
+    "    required_actions = run.required_action.submit_tool_outputs.model_dump()\n",
+    "    print(required_actions)\n",
+    "    tool_outputs = []\n",
+    "    import json\n",
+    "    for action in required_actions[\"tool_calls\"]:\n",
+    "        func_name = action['function']['name']\n",
+    "        arguments = json.loads(action['function']['arguments'])\n",
+    "        \n",
+    "        if func_name == \"get_stock_price\":\n",
+    "            output = get_stock_price(symbol=arguments['symbol'])\n",
+    "            tool_outputs.append({\n",
+    "                \"tool_call_id\": action['id'],\n",
+    "                \"output\": output\n",
+    "            })\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unknown function: {func_name}\")\n",
+    "        \n",
+    "    print(\"Submitting outputs back to the Assistant...\")\n",
+    "    client.beta.threads.runs.submit_tool_outputs(\n",
+    "        thread_id=thread.id,\n",
+    "        run_id=run.id,\n",
+    "        tool_outputs=tool_outputs\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
+      "Framework counts Assistants: 1, Threads: 0, Files: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "assistants, threads, files = framework.get_counts()\n",
+    "print(f\"Framework counts Assistants: {assistants}, Threads: {threads}, Files: {files}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process the message, function calling leveraging the latest stock prices, print the results and dispose of the objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_azYicHFKVNrBWPQ2gAUiSIe2', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_fhNIY98F1B8hqNsh48lvDxi0', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_U38w3pe4tc99GSqTb1MRbXwq', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_39wYOCMWHS3etDaKjNl9bnXa', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
       "Assistant: The latest stock prices are as follows:\n",
-      "\n",
-      "- Microsoft (MSFT): $390.36\n",
-      "- NVIDIA (NVDA): $563.68\n",
-      "\n",
-      "Please note that these prices are subject to change and may vary by the time you check the market.\n",
+      "- Microsoft (MSFT): $388.70\n",
+      "- NVIDIA (NVDA): $562.76\n",
       "User: Can you please provide me the latest stock prices for Microsoft and NVIDIA?\n",
-      "ThreadDeleted(id='thread_mpjriokfsOnHSr4mrhTvXoBa', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_zMKGJSoTbMSP83OmckE9oxLs', deleted=True, object='assistant.deleted')\n"
+      "ThreadDeleted(id='thread_NDU6hZ8DdO47qUETgaGZRU1d', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_EM9rJaF1gAj93KyKTvLdGByr', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
@@ -211,30 +266,7 @@
     "\n",
     "        break\n",
     "    elif run_status.status == 'requires_action':\n",
-    "        print(\"Function Calling\")\n",
-    "        required_actions = run_status.required_action.submit_tool_outputs.model_dump()\n",
-    "        print(required_actions)\n",
-    "        tool_outputs = []\n",
-    "        import json\n",
-    "        for action in required_actions[\"tool_calls\"]:\n",
-    "            func_name = action['function']['name']\n",
-    "            arguments = json.loads(action['function']['arguments'])\n",
-    "            \n",
-    "            if func_name == \"get_stock_price\":\n",
-    "                output = get_stock_price(symbol=arguments['symbol'])\n",
-    "                tool_outputs.append({\n",
-    "                    \"tool_call_id\": action['id'],\n",
-    "                    \"output\": output\n",
-    "                })\n",
-    "            else:\n",
-    "                raise ValueError(f\"Unknown function: {func_name}\")\n",
-    "            \n",
-    "        print(\"Submitting outputs back to the Assistant...\")\n",
-    "        client.beta.threads.runs.submit_tool_outputs(\n",
-    "            thread_id=thread.id,\n",
-    "            run_id=run.id,\n",
-    "            tool_outputs=tool_outputs\n",
-    "        )\n",
+    "        function_calling(client, run_status)\n",
     "    else:\n",
     "        print(\"Waiting for the Assistant to process...\")\n",
     "        time.sleep(1)"
