--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -21,7 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
     "import oaihelper as framework\n",
     "import yfinance as yf\n",
     "\n",
@@ -99,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_EM9rJaF1gAj93KyKTvLdGByr 1\n"
+      "Added assistant:  asst_KJ0leGJW4NZTDIYwogl3IqMK 1\n"
      ]
     }
    ],
@@ -118,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a thread, put a message on the thread, and view the initial status"
+    "### Handle Processing functions"
    ]
   },
   {
@@ -127,40 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Create a Thread\n",
-    "thread = client.beta.threads.create()\n",
-    "\n",
-    "# Step 3: Add a Message to a Thread\n",
-    "message = client.beta.threads.messages.create(\n",
-    "    thread_id=thread.id,\n",
-    "    role=\"user\",\n",
-    "    content=\"Can you please provide me the latest stock prices for Microsoft and NVIDIA?\"\n",
-    ")\n",
-    "\n",
-    "# Step 4: Run the Assistant\n",
-    "run = client.beta.threads.runs.create(\n",
-    "    thread_id=thread.id,\n",
-    "    assistant_id=stock_assistant.id,\n",
-    "    instructions=\"Please address the user as Mary.\"\n",
-    ")\n",
-    "\n",
-    "#print(run.model_dump_json(indent=4))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Handle Processing functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def function_calling(client, run):\n",
+    "def function_calling(client, thread, run):\n",
     "    print(\"Function Calling\")\n",
     "    required_actions = run.required_action.submit_tool_outputs.model_dump()\n",
     "    print(required_actions)\n",
@@ -188,6 +154,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process the messages, function calling leveraging the latest stock prices, print the results and dispose of the objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new thread for Alex with user_id 123\n",
+      "Added thread:  thread_EOZUA5kiRSWqB5ChzjTGp2gV 1\n",
+      "Function Calling\n",
+      "{'tool_calls': [{'id': 'call_hn9czgizwH5FlUwQdSPkZF4c', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_xJmC530Ap7xMdTYETx214z9y', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "Submitting outputs back to the Assistant...\n",
+      "Generated message: The latest closing prices for the stocks are as follows:\n",
+      "\n",
+      "- Microsoft (MSFT): $388.76\n",
+      "- NVIDIA (NVDA): $561.76\n",
+      "\n",
+      "Please note that stock prices fluctuate frequently during trading hours. These prices represent the last closing prices.\n",
+      "To Alex: The latest closing prices for the stocks are as follows:\n",
+      "\n",
+      "- Microsoft (MSFT): $388.76\n",
+      "- NVIDIA (NVDA): $561.76\n",
+      "\n",
+      "Please note that stock prices fluctuate frequently during trading hours. These prices represent the last closing prices.\n",
+      "Retrieving existing thread for Alex with user_id 123\n",
+      "Function Calling\n",
+      "{'tool_calls': [{'id': 'call_cGHAqpz5ZyC8p5in4FCnvQZb', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_yLG8IITvC3xvxFzW7UAMyAlZ', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "Submitting outputs back to the Assistant...\n",
+      "Generated message: The latest closing prices for the stocks are as follows:\n",
+      "\n",
+      "- Apple (AAPL): $182.33\n",
+      "- Tesla (TSLA): $220.13\n",
+      "\n",
+      "As with all stock prices, these are subject to change with market conditions and the time of day. These figures represent the last closing prices.\n",
+      "To Alex: The latest closing prices for the stocks are as follows:\n",
+      "\n",
+      "- Apple (AAPL): $182.33\n",
+      "- Tesla (TSLA): $220.13\n",
+      "\n",
+      "As with all stock prices, these are subject to change with market conditions and the time of day. These figures represent the last closing prices.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The latest closing prices for the stocks are as follows:\\n\\n- Apple (AAPL): $182.33\\n- Tesla (TSLA): $220.13\\n\\nAs with all stock prices, these are subject to change with market conditions and the time of day. These figures represent the last closing prices.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "framework.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Microsoft and NVIDIA?\", \"123\", \"Alex\", function_calling)\n",
+    "framework.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Apple and Tesla?\", \"123\", \"Alex\", function_calling)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -196,20 +229,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Framework counts Assistants: 1, Threads: 0, Files: 0\n"
+      "Framework counts Assistants: 1, Threads: 1, Files: 0\n"
      ]
     }
    ],
    "source": [
     "assistants, threads, files = framework.get_counts()\n",
     "print(f\"Framework counts Assistants: {assistants}, Threads: {threads}, Files: {files}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Process the message, function calling leveraging the latest stock prices, print the results and dispose of the objects"
    ]
   },
   {
@@ -221,55 +247,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_U38w3pe4tc99GSqTb1MRbXwq', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_39wYOCMWHS3etDaKjNl9bnXa', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
-      "Submitting outputs back to the Assistant...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Assistant: The latest stock prices are as follows:\n",
-      "- Microsoft (MSFT): $388.70\n",
-      "- NVIDIA (NVDA): $562.76\n",
-      "User: Can you please provide me the latest stock prices for Microsoft and NVIDIA?\n",
-      "ThreadDeleted(id='thread_NDU6hZ8DdO47qUETgaGZRU1d', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_EM9rJaF1gAj93KyKTvLdGByr', deleted=True, object='assistant.deleted')\n"
+      "Deleting:  1  assistants.\n",
+      "AssistantDeleted(id='asst_KJ0leGJW4NZTDIYwogl3IqMK', deleted=True, object='assistant.deleted')\n",
+      "Deleting:  1  threads.\n",
+      "ThreadDeleted(id='thread_EOZUA5kiRSWqB5ChzjTGp2gV', deleted=True, object='thread.deleted')\n",
+      "Deleting:  0  files.\n"
      ]
     }
    ],
    "source": [
-    "while True:\n",
-    "    # Wait for 1 seconds\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "    # Retrieve the run status\n",
-    "    run_status = client.beta.threads.runs.retrieve(\n",
-    "        thread_id=thread.id,\n",
-    "        run_id=run.id\n",
-    "    )\n",
-    "    #print(run_status.model_dump_json(indent=4))\n",
-    "\n",
-    "    # If run is completed, get messages\n",
-    "    if run_status.status == 'completed':\n",
-    "        messages = client.beta.threads.messages.list(\n",
-    "            thread_id=thread.id\n",
-    "        )\n",
-    "\n",
-    "        # Loop through messages and print content based on role\n",
-    "        for msg in messages.data:\n",
-    "            role = msg.role\n",
-    "            content = msg.content[0].text.value\n",
-    "            print(f\"{role.capitalize()}: {content}\")\n",
-    "\n",
-    "        ## Cleanup\n",
-    "        print(client.beta.threads.delete(thread.id))\n",
-    "        print(client.beta.assistants.delete(stock_assistant.id))\n",
-    "\n",
-    "        break\n",
-    "    elif run_status.status == 'requires_action':\n",
-    "        function_calling(client, run_status)\n",
-    "    else:\n",
-    "        print(\"Waiting for the Assistant to process...\")\n",
-    "        time.sleep(1)"
+    "framework.cleanup(client)"
    ]
   }
  ],
