Refactored to use framework.

--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def function_calling(client, thread, run):\n",
+    "def function_calling_delegate(client, thread, run):\n",
     "    print(\"Function Calling\")\n",
     "    required_actions = run.required_action.submit_tool_outputs.model_dump()\n",
     "    print(required_actions)\n",
@@ -216,8 +216,8 @@
     }
    ],
    "source": [
-    "framework.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Microsoft and NVIDIA?\", \"123\", \"Alex\", function_calling)\n",
-    "framework.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Apple and Tesla?\", \"123\", \"Alex\", function_calling)\n"
+    "framework.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Microsoft and NVIDIA?\", \"123\", \"Alex\", function_calling_delegate)\n",
+    "framework.generate_response(client,stock_assistant,\"Can you please provide me the latest stock prices for Apple and Tesla?\", \"123\", \"Alex\", function_calling_delegate)\n"
    ]
   },
   {
